Require Java 25; test processors with Google compile-testing
plus a few bugs fixed